# Agentic-Healthcare

./: .dockerignore  .env  Comorbidities.xlsx  Dockerfile.agent  Dockerfile.server  README.md  app.py  client.py  comorbidity_data_prep.py  comorbidiy_retriever.py  cpt_data_prep.py  cpt_retriever.py  docker-compose.yml  icd11_retriever.py  main.py  pyproject.toml  report_loading.py  server.py  tools.py  validation.py  vectordb_builder.py
CPT/cpt_faiss/: index.faiss  index.pkl
comorbidities_faiss/: index.faiss  index.pkl
