[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipython>=9.6.0",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai>=2.1.12",
    "langchain-huggingface>=0.3.1",
    "langgraph>=0.6.10",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
]
