[project]
name = "healthcare-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "faiss-cpu>=1.12.0",
    "fastapi>=0.120.4",
    "google>=3.0.0",
    "google-generativeai>=0.8.5",
    "httpx>=0.28.1",
    "ipykernel>=7.1.0",
    "ipython>=9.6.0",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.6",
    "langchain-community>=0.3.31",
    "langchain-core>=0.3.79",
    "langchain-google-genai<2.1.12",
    "langchain-huggingface>=0.3.1",
    "langchain-text-splitters>=0.3.11",
    "langgraph>=0.6.10",
    "mcp[cli]>=1.19.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "pip>=25.2",
    "pymupdf>=1.26.5",
    "pytesseract>=0.3.13",
    "python-dotenv>=1.1.1",
    "sentence-transformers>=5.1.1",
    "streamlit>=1.50.0",
    "uvicorn>=0.37.0",
]
